syntax = "proto3";
package g;

/**
protoc --go_out=. --go_opt=paths=source_relative \
    --go-grpc_out=. --go-grpc_opt=paths=source_relative \
    trace.proto
**/


option go_package = "github.com/mingoooo/tail-based-sampling/g";


message Trace {
    string traceID = 1;
    repeated Span spanList = 2;
}


message Span {
    bytes raw = 1;
    string startTime = 2;
}
